[REFACTOR] 타임박스 도메인, 엔티티 분리 - 파일 네이밍 수정 외 3개 (#200)